--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,10 @@ label {
     color: black !important;
 }
 
+.timestamp {
+    font-size: 10px;
+    font-style: italic;
+}
 
 hr {
     width: 230px;
